<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
        <item>RUB</item>
        <item>GBP</item>
        <item>JPY</item>
    </string-array>
</resources>